# RootFall

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  setup.py
cmake/: Common.cmake  CompileOptions.cmake  Utils.cmake
data/: config,example.json
docs/: scripts.md  structure.md
scripts/: README.md  pyproject.toml
scripts/src/scripts/utils/: __init__.py  compile.py
source/: CMakeLists.txt  version.hpp.in
source/RootFall/: CMakeLists.txt
source/RootFall/source/: CMakeLists.txt
source/RootFall/source/RootFall/: RootFallBuild.cpp  RootFallMain.cpp  RootFallPCH.cpp  RootFallPCH.hpp
source/RootFall/source/RootFall/Core/: Application.cpp  Application.hpp
source/RootFall/source/RootFall/Platform/: Renderer.hpp  Window.cpp  Window.hpp
source/RootFall/source/RootFall/Platform/SDL/: SDLWindow.cpp  SDLWindow.hpp
source/RootFall/source/RootFall/Platform/WebGPU/: WebGPUUtils.cpp  WebGPUUtils.hpp
source/RootFall/source/RootFall/Renderer/: Renderer.cpp  Renderer.hpp
source/RootFallCore/: CMakeLists.txt
source/RootFallCore/source/: CMakeLists.txt
source/RootFallCore/source/RootFallCore/Core/: Base.hpp  Endianness.hpp  Timer.hpp
source/RootFallCore/source/RootFallCore/Debug/: Instrumentor.hpp
source/RootFallCore/source/RootFallCore/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
source/RootFallCore/source/RootFallCore/Input/: Action.cpp  Action.hpp  KeyCodes.hpp  MouseCodes.hpp
source/RootFallCore/source/RootFallCore/Utils/: FileIO.cpp  FileIO.hpp
source/RootFallCore/tests/: CMakeLists.txt
source/codegeneration/: template_api.hpp.in  template_msvc_api.hpp.in
