set(ROOTFALL_CORE "RootFallCore")
set(ROOTFALL_CORE_DIR ${DIR_SOURCE}/${ROOTFALL_CORE})

set(ROOTFALL_CORE_SOURCE_DIR ${ROOTFALL_CORE_DIR}/source/${ROOTFALL_CORE})
set(ROOTFALL_CORE_HEADERS_DIR ${ROOTFALL_CORE_DIR})

set(ROOTFALL_CORE_SOURCES
  ${ROOTFALL_CORE_SOURCE_DIR}/Core/Log.cpp
  ${ROOTFALL_CORE_SOURCE_DIR}/Core/Utils.cpp

  ${ROOTFALL_CORE_SOURCE_DIR}/Input/Action.cpp

  ${ROOTFALL_CORE_SOURCE_DIR}/Utils/BumpAllocator.cpp
  ${ROOTFALL_CORE_SOURCE_DIR}/Utils/FileIO.cpp
  ${ROOTFALL_CORE_SOURCE_DIR}/Utils/Math.cpp
)
set(ROOTFALL_CORE_HEADERS)

add_subdirectory(source)
add_subdirectory(tests)
